--- a/modules/installation/pages/proxy-setup.adoc
+++ b/modules/installation/pages/proxy-setup.adoc
@@ -23,7 +23,7 @@ This service forwards the Salt interactions to the {productname} server.
 .Proxy Chains
 ====
 It is possible to arrange Salt proxies in a chain.
-In such a case, the upstream proxy is named "`parent`".
+In such a case, the upstream proxy is named `parent`.
 ====
 
 Make sure the proxie's TCP ports `4505` and `4506` are open.
