--- a/modules/installation/pages/proxy-setup.adoc
+++ b/modules/installation/pages/proxy-setup.adoc
@@ -26,7 +26,7 @@ It is possible to arrange Salt proxies in a chain.
 In such a case, the upstream proxy is named `parent`.
 ====
 
-Make sure the proxie's TCP ports `4505` and `4506` are open.
+Make sure the TCP ports `4505` and `4506` are open on the proxy.
 The proxy must be able to reach the {productname} Server or a parent proxy on these ports.
 
 
