--- a/modules/installation/pages/proxy-setup.adoc
+++ b/modules/installation/pages/proxy-setup.adoc
@@ -213,7 +213,7 @@ filename: "pxelinux.0"
 [[replacing.a.susemgrproxy]]
 == Replace a {susemgrproxy}
 
-A {susemgrproxy} is `dumb` in the sense that it does not contain any information about the clients that are connected to it.
+A {susemgrproxy} is dumb in that it does not contain any information about the clients that are connected to it.
 A {susemgrproxy} can therefore be replaced by a new one.
 Naturally, the replacement proxy must have the same name and IP address as its predecessor.
 
