--- a/modules/installation/pages/server-setup.adoc
+++ b/modules/installation/pages/server-setup.adoc
@@ -64,7 +64,7 @@ image::quickstart-mgr-setup5-ncurses.png[scaledwidth=80%]
 
 . Click btn:[Yes] to run setup when prompted.
 
-. When the setup has completed, click btn:[Next] to continue.
+. When setup is complete, click btn:[Next] to continue.
 You will see the address of the {productname} {webui}.
 
 . Click btn:[Finish] to complete {productname} setup.
