--- a/modules/installation/pages/server-setup.adoc
+++ b/modules/installation/pages/server-setup.adoc
@@ -148,7 +148,7 @@ image::admin_suse_products.png[scaledwidth=80%]
 
 * Add channels to {productname} by selecting the check box to the left of each channel.
 Click the arrow symbol to the left of the description to unfold a product and list available modules.
-* Start product synchronization by clicking btn:[Add Products].
+* Click btn:[Add Products] to start product synchronization.
 
 After adding the channel {productname} will schedule the channel to be synchronized.
 This can take a long time as {productname} will copy channel software sources from the {suse} repositories located at {scc} to local [path]``/var/spacewalk/`` directory of your server.
