--- a/modules/installation/pages/server-setup.adoc
+++ b/modules/installation/pages/server-setup.adoc
@@ -176,4 +176,5 @@ Monitor the channel synchronization process in real-time by viewing channel log 
 tail -f /var/log/rhn/reposync/<CHANNEL_NAME>.log
 ----
 
-After the channel synchronization process has completed continue with xref:client-configuration:manual-registration-overview.adoc[Client Registration].
+When the channel synchronization process is complete, you can continue with client registration.
+For more instructions, see xref:client-configuration:manual-registration-overview.adoc[].
