--- a/modules/installation/pages/proxy-setup.adoc
+++ b/modules/installation/pages/proxy-setup.adoc
@@ -102,7 +102,7 @@ For further information on country codes, refer to the online https://www.iso.or
 [TIP]
 .Country Code
 ====
-As the country code enter the country code set during the {productname} installation.
+In the [guimenu]``country code`` field, enter the country code set during the {productname} installation.
 For example, if your proxy is in US and your {productname} in DE, you must enter `DE` for the proxy.
 ====
 +
