--- a/modules/installation/pages/proxy-setup.adoc
+++ b/modules/installation/pages/proxy-setup.adoc
@@ -103,7 +103,7 @@ For further information on country codes, refer to the online https://www.iso.or
 .Country Code
 ====
 In the [guimenu]``country code`` field, enter the country code set during the {productname} installation.
-For example, if your proxy is in US and your {productname} in DE, you must enter `DE` for the proxy.
+For example, if your proxy is in the US and your {productname} is in DE, enter `DE` for the proxy.
 ====
 +
 
