--- a/modules/installation/pages/proxy-setup.adoc
+++ b/modules/installation/pages/proxy-setup.adoc
@@ -128,7 +128,7 @@ SLP stands for Service Location Protocol.
 
 If parts are missing, such as CA key and public certificate, the script prints commands that you must execute to integrate the needed files.
 When the mandatory files are copied, run [command]``configure-proxy.sh`` again.
-Also run again the script if a HTTP error was met during script execution.
+If you receive an HTTP error during script execution, run the script again.
 
 [command]``configure-proxy.sh`` activates services required by {productname} Proxy, such as [systemitem]``squid``, [systemitem]``apache2``, [systemitem]``salt-broker``, and [systemitem]``jabberd``.
 
