--- a/modules/installation/pages/proxy-setup.adoc
+++ b/modules/installation/pages/proxy-setup.adoc
@@ -139,7 +139,7 @@ To check the status of the proxy system and its clients, click the proxy system'
 
 
 [[proxy.pxe.setup]]
-== Enable PXE Boot through {susemgrproxy}
+== Enable PXE Boot
 
 
 
