--- a/modules/installation/pages/proxy-setup.adoc
+++ b/modules/installation/pages/proxy-setup.adoc
@@ -18,7 +18,7 @@ The new salt-broker service will be automatically started at the end of the pack
 This service forwards the Salt interactions to the {productname} server.
 ////
 
-// REMARK 2019-08-23, ke: Is this a proxy-only feature?
+// REMARK 2019-08-23, ke: Is this a Salt proxy-only feature?
 [NOTE]
 .Proxy Chains
 ====
