--- a/modules/installation/pages/general-requirements.adoc
+++ b/modules/installation/pages/general-requirements.adoc
@@ -2,7 +2,7 @@
 = General Requirements
 
 // REMARK this list needs to be cleaned up
-Before you begin installation, ensure that your environment meets the following requirements:
+Before you begin installation, ensure that your environment meets these requirements:
 
 * Current {scc} organization credentials
 * Access to installation media
