--- a/modules/installation/pages/network-requirements.adoc
+++ b/modules/installation/pages/network-requirements.adoc
@@ -6,7 +6,7 @@ This section details the networking and port requirements for {productname}.
 Fully Qualified Domain Name (FQDN)::
 The {productname} server must resolve its FQDN correctly or cookies will not work properly on the WebUI.
 +
-For more information about configuring the hostname and DNS, see link:https://www.suse.com/documentation/sles-15/book_sle_admin/data/sec_network_yast.html#sec_network_yast_change_host[SUSE Linux Enterprise Server Documentation - Configuring Host Name and DNS]
+For more information about configuring the hostname and DNS, see link:https://www.suse.com/documentation/sles-15/book_sle_admin/data/sec_network_yast.html#sec_network_yast_change_host
 
 Hostname and IP Address::
 To ensure that the {productname} domain name can be resolved by its clients, both server and client machines must be connected to a working DNS server.
