--- a/modules/installation/pages/network-requirements.adoc
+++ b/modules/installation/pages/network-requirements.adoc
@@ -16,7 +16,7 @@ For more information about setting up a DNS server, see link:https://www.suse.co
 Using a Proxy When Installing from {sle} Media::
 If you are on an internal network and do not have access to {scc}, you can set up and use a proxy during installation.
 +
-For more information about configuring a proxy for access to {scc} during a {sle} installation, see link:https://www.suse.com/documentation/sles-15/book_sle_deployment/data/sec_boot_parameters_advanced.html#sec_boot_parameters_advanced_proxy[SUSE Linux Enterprise Server Documentation -  Using a Proxy During Installation]
+For more information about configuring a proxy for access to {scc} during a {sle} installation, see link:https://www.suse.com/documentation/sles-15/book_sle_deployment/data/sec_boot_parameters_advanced.html#sec_boot_parameters_advanced_proxy
 
 
 .Naming Your Server
