--- a/modules/installation/pages/network-requirements.adoc
+++ b/modules/installation/pages/network-requirements.adoc
@@ -11,7 +11,7 @@ For more information about configuring the hostname and DNS, see link:https://ww
 Hostname and IP Address::
 To ensure that the {productname} domain name can be resolved by its clients, both server and client machines must be connected to a working DNS server.
 +
-For more information about setting up a DNS server, see link:https://www.suse.com/documentation/sles-15/book_sle_admin/data/cha_dns.html[SUSE Linux Enterprise Server Documentation - The Domain Name System]
+For more information about setting up a DNS server, see link:https://www.suse.com/documentation/sles-15/book_sle_admin/data/cha_dns.html
 
 Using a Proxy When Installing from {sle} Media::
 If you are on an internal network and do not have access to {scc}, you can set up and use a proxy during installation.
