--- a/modules/installation/pages/install-vm.adoc
+++ b/modules/installation/pages/install-vm.adoc
@@ -13,7 +13,16 @@ A kernel virtual machine (KVM) combined with Virtual Machine Manager (_virt-mana
 // - 2019-06-19.
 
 Enter the following settings when creating a new virtual machine using *virt-manager*.
+
+[NOTE]
+====
+This table specifies the minimum requirements.
+These are suitable for a quick test installation, such as a server with one client.
+If you want to use a production environment, review the requirements listed in xref:hardware-requirements.adoc[].
+====
+
 In the following table replace _version_ with the actual product version string.
+Find the JeOS image at https://download.suse.com/.
 
 [cols="1,1", options="header"]
 |===
@@ -49,7 +58,7 @@ Create three additional virtual disks required for the {productname} storage par
 . Create a new virtual machine using the downloaded JeOS KVM image and select [guimenu]``Import existing disk image``.
 . Configure RAM and number of CPUs (at least 4 GB RAM and 2 CPUs).
 . Name your KVM machine and select the [guimenu]``Customize configuration before install`` check box.
-. Select the btn:[Add Hardware] button and create three new virtual disks with the following specifications.
+. Click btn:[Add Hardware] to create three new virtual disks with these specifications.
 These disks will be partitioned and mounted in <<proc.jeos.susemgr.prep>>.
 +
 
@@ -71,7 +80,7 @@ Also consider to create a separate partition for [path]``/srv`` where Kiwi image
 
 . Click btn:[Begin Installation] to boot the new VM from the JeOS image.
 
-Proceed through the basic JeOS installation prompts until you reach the command line.
+Follow the prompts to complete the basic JeOS installation, until the process is complete and the command prompt waits for input.
 
 During the basic installation prompts you are asked to enter the root password.
 In the next message box click btn:[Confirm root Password].
@@ -141,7 +150,8 @@ zypper in -t package yast2-storage-ng
 
 [NOTE]
 ====
-Storage size values are the absolute minimum—only suitable for a small test or demo installation.
+Storage size values are the absolute minimum.
+They are suitable only for a small test or demonstration installation, such as a server with one client.
 Especially [path]``/var/spacewalk/`` may quickly need more space.
 Also consider to create a separate partition for [path]``/srv`` where Kiwi images are stored.
 ====
@@ -154,7 +164,7 @@ Also consider to create a separate partition for [path]``/srv`` where Kiwi image
 | VirtIO Disk 4        | [path]``swap``           | 4{nbsp}GB    | swap
 |===
 
-. Exit the partitioner and install the {productname} pattern (approximately 730 packages, consuming 1.4 GB when installed):
+. Exit the partitioner and install the {productname} pattern (approximately 730 packages, using 1.4 GB of disk space when installed):
 +
 
 ----
