--- a/modules/installation/pages/network-requirements.adoc
+++ b/modules/installation/pages/network-requirements.adoc
@@ -20,7 +20,7 @@ For more information about configuring a proxy for access to {scc} during a {sle
 
 
 .Naming Your Server
-[CAUTION]
+[IMPORTANT]
 ====
 The hostname of {productname} must not contain uppercase letters as this may cause _jabberd_ to fail.
 Choose the hostname of your {productname} server carefully.
