Installation Guide: Setup files (server and proxy) (#676)
* cleanup done
Co-Authored-By: Lana Brindley <lbrindley@suse.de>
* Update proxy-setup.adoc
Stop saying "proxy _server_".  Just "proxy" is good enough.

--- a/modules/installation/pages/proxy-registration.adoc
+++ b/modules/installation/pages/proxy-registration.adoc
@@ -7,18 +7,14 @@ Re-install the Proxy if you want to switch to Salt.
 
 The following procedure describe software channel setup and registering the installed {productname} Proxy with an activation key as a {productname} client.
 
-
-
 [IMPORTANT]
 .Downloading Channels
 ====
 Before you can select the correct child channels while creating the activation key, ensure you have completely downloaded the {productname} Proxy 4 channel and all the recommended and mandatory {sle} 15 channels.
 ====
 
-
 [[proxy-register-procedure]]
 .Procedure: Registering the Proxy
-
 
 . Create an activation key based on the [systemitem]``SLE-Product-SUSE-Manager-Proxy-4.0-Pool`` base channel.
 For more information about activation keys, see xref:client-configuration:clients-and-activation-keys.adoc[Creating Activation Key].
@@ -58,10 +54,13 @@ xref:client-configuration:registration-bootstrap.adoc[].
 image::proxy-bootstrap.png[]
 
 . Create the SUSE Manager Tools Repository for bootstrapping, see xref:client-configuration:creating-a-tools-repository.adoc[Create Tools Repository].
-. Bootstrap the client with the bootstrap script.  For more information, see xref:client-configuration:registration-bootstrap.adoc[].
-. In case of a Salt client, accept the key on the menu:Main Menu[Salt > Keys] page by clicking the check mark.
-It then will appear in the menu:Main Menu[Systems > Overview].
-. Check via menu:System Details[Software > Software Channels] that the four proxy channels ([systemitem]``Pool`` and [systemitem]``Updates`` for [systemitem]``SLE-PRODUCT`` and [systemitem]``SLE-MODULE``) plus the recommended channels are selected; [systemitem]``SLE-PRODUCT-Pool`` as the base channel and the others as child channels.
+. Bootstrap the client with the bootstrap script.
+For more information, see xref:client-configuration:registration-bootstrap.adoc[].
+. For Salt clients, accept the key on the menu:Salt[Keys] page by checking the appropriate checkbox.
+When accepted, it will appear in the menu:Systems[Overview].
+. Navigate to menu:System Details[Software > Software Channels], and check that the four proxy channels ([systemitem]``Pool`` and [systemitem]``Updates`` for [systemitem]``SLE-PRODUCT`` and [systemitem]``SLE-MODULE``) plus the recommended channels are selected.
+[systemitem]``SLE-PRODUCT-Pool`` must be the base channel and the others are child channels.
++
 
 .Proxy Channels
 image::sles15-proxy-channels.png[]
