--- a/modules/installation/pages/install-proxy-unified.adoc
+++ b/modules/installation/pages/install-proxy-unified.adoc
@@ -31,7 +31,7 @@ The primary goal of a {susemgrproxy} is to improve {productname} performance by 
 
 
 
-.Procedure: Installing {susemgr} Proxy from a DVD image
+.Procedure: Installing {susemgr} Proxy from a DVD Image
 
 . To boot the Unified Installer from the installation image, you might need to adjust the boot order in the BIOS.
 . When prompted, select [guimenu]``Installation``.
@@ -44,7 +44,7 @@ image::unifiedinstaller-proxy.png[scaledwidth=80%]
 . Read and agree to the End User Licence Agreement, and click btn:[Next].
 . In the [guimenu]``Registration`` screen, check the [guimenu]``Register System via scc.suse.com`` checkbox, enter your {scc} credentials, and click btn:[Next].
 . In the [guimenu]``Available Extensions and Modules`` screen, select any extensions or modules you require, and click btn:[Next].
-[systemitem]``Basesystem``, [systemitem]``SUSE Manager Proxy``, and [systemitem]``Server Applications`` are pre-selected and mandatory for a SUSE Manager Proxy installation.
+[systemitem]``Basesystem``, [systemitem]``SUSE Manager Proxy``, and [systemitem]``Server Applications`` are pre-selected and mandatory for a {productname} Proxy installation.
 OPTIONAL: In the following [guimenu]``Add On Product`` screen, select any additional or add-on products you require, and click btn:[Next].
 . In the [guimenu]``System Role`` screen, check the [guimenu]``SUSE Manager Proxy`` checkbox, and click btn:[Next].
 . In the [guimenu]``Suggested Partitioning`` screen, accept the default values, or use the btn:[Guided Setup] or btn:[Expert Practitioner] options to customize your partitioning model, and click btn:[Next].
@@ -53,8 +53,14 @@ OPTIONAL: In the following [guimenu]``Add On Product`` screen, select any additi
 // . System Administrator "root" follows
 . Review the settings on the [guimenu]``Installation Settings`` screen, and then click btn:[Install].
 
-When the installation procedure has finished, you can check that you have all the required modules by using the [command]``SUSEConnect --status-text`` command at a command prompt.
-For {susemgr} Proxy, the expected modules are:
+When the installation procedure has finished, you can check that you have all the required modules.
+At the command prompt, enter:
+
+----
+SUSEConnect --status-text
+----
+
+For {productname} Proxy, the expected modules are:
 
 * {sls} Basesystem Module
 * Server Applications Module
