focus on unified installer

--- a/modules/installation/pages/install-server-unified.adoc
+++ b/modules/installation/pages/install-server-unified.adoc
@@ -5,7 +5,7 @@
 This section describes how to install {susemgr} Server from {sle} installation media.
 It assumes you have already registered the {susemgr} product with the {scc} and have a registration code.
 
-For information on registering with {scc}, or obtaining installation media, see xref:general-requirements.adoc[Requirements].
+For information on registering with {scc}, or obtaining the Unified Installer, see xref:general-requirements.adoc[Requirements].
 
 
 [NOTE]
@@ -15,9 +15,9 @@ Before installing {susemgr}, ensure your physical or virtual machine has enough 
 
 
 
-.Procedure: Installing {susemgr} Server from a DVD image
+.Procedure: Installing {susemgr} Server from a DVD Image
 
-. Boot your server from the installation image.
+. Boot your system with the Unified Installer.
 If booting fails you might need to adjust the boot order in the BIOS.
 . When prompted, select [guimenu]``Installation``.
 +
