--- a/modules/installation/pages/general-requirements.adoc
+++ b/modules/installation/pages/general-requirements.adoc
@@ -42,15 +42,20 @@ Depending on your organization's setup, you might also need to activate your sub
 
 
 [[install.media]]
-== Obtaining Installation Media
+== Obtaining {slsa} Unified Installer
 
-From {slsa}{nbsp}15{nbsp}SP1, {susemgr} Server and Proxy is available as a base product, and can be installed with the {slsa} Unified Installer.
+From {slsa}{nbsp}15{nbsp}SP1, {susemgr} {productnumber} Server and Proxy is available as a base product, and can be installed with the {slsa} Unified Installer.
 
 ifeval::[{suma-content} == true]
-Therefore you do not require a separate registration code for {slsa} {sles-version} {sp-version}, only for Server or Proxy
+Therefore you do not require a separate registration code for {slsa}, only for {susemgr} Server or Proxy.
 endif::[]
 
-Download {slsa}{nbsp}15{nbsp}SP1 or higher from https://www.suse.com/products/server/download/[SUSE Linux Enterprise Server - Media Download]
+If not already done, download the {slsa} Unified Installer
+(version {nbsp}15{nbsp}SP1 or higher) from
+https://www.suse.com/products/server/download/[SUSE Linux Enterprise
+Server - Media Download].  With the Unified Installer you can installf
+many SLE-based base products such as {slsa}, {sled}, {slsa} for SAP
+Applications, or {susemgr}.
 
 //TODO: What about Uyuni?
 
