added xref to setup for imbz

--- a/modules/installation/pages/install-ibmz.adoc
+++ b/modules/installation/pages/install-ibmz.adoc
@@ -101,3 +101,5 @@ This must be set up before you continue with installation.
 ----
 yast2 susemanagersetup
 ----
+
+For proceeding with {productname} setup, see xref:installation:server-setup.adoc[].
