--- a/modules/installation/pages/install-vm.adoc
+++ b/modules/installation/pages/install-vm.adoc
@@ -123,7 +123,7 @@ SUSEConnect -p sle-module-suse-manager-server/<productnumber>/x86_64
 ----
 +
 JeOS is configured to install only required packages.
-To get all features working you should allow to install also recommended packages.
+Enable all features by allowing the installation of recommended packages.
 In `/etc/zypp/zypp.conf` change:
 +
 
@@ -173,4 +173,4 @@ zypper in pattern-suma_server
 
 . Reboot.
 
-For proceeding with {productname} setup, see xref:installation:server-setup.adoc[SUSE Manager Setup].
+For proceeding with {productname} setup, see xref:installation:server-setup.adoc[].
