zypper is undefined

--- a/modules/upgrade/pages/migrate-3x-3x.adoc
+++ b/modules/upgrade/pages/migrate-3x-3x.adoc
@@ -87,6 +87,6 @@ spacewalk-service start
 
 If the process fails, check these issues first:
 
-* If {zypper}  does not have the migration tool available, install the [package]``zypper-migration-plugin`` package.
+* If Zypper  does not have the migration tool available, install the [package]``zypper-migration-plugin`` package.
 * If there are older updates available, Zypper will notify you and ask to install them first.
 We strongly recommend you install all updates before performing the upgrade.
