--- a/modules/administration/pages/maintenance-window.adoc
+++ b/modules/administration/pages/maintenance-window.adoc
@@ -5,4 +5,11 @@ If you work on a system with scheduled maintenance windows, you might find it di
 
 This section contains a checklist for your maintenance window, with links to further information on performing each of the steps, if you need it.
 
-Coming soon ...
+
+. Stop services.
+. Check if the configuration is still correct, and apply the highstate.
+. Apply the latest updates
+. Update to the latest service pack, if required.
+. Reboot the server.
+. Check if the configuration is still correct, and apply the highstate.
+. Start any stopped services.
