--- a/modules/installation/pages/general-requirements.adoc
+++ b/modules/installation/pages/general-requirements.adoc
@@ -23,7 +23,7 @@ It is also not possible to use {slsa} for SAP as a base for {productname} for a 
 
 
 [[install.scc-register]]
-== Obtaining your SUSE Customer Center Credentials
+== Obtain Your SUSE Customer Center Credentials
 
 You will need to create an account with {scc} before you install {sls} and {productname}.
 To obtain your {scc} credentials:
@@ -42,7 +42,7 @@ Depending on your organization's setup, you might also need to activate your sub
 
 
 [[install.media]]
-== Obtaining {slsa} Unified Installer
+== Obtain the Unified Installer
 
 From {slsa}{nbsp}15{nbsp}SP1, {susemgr} {productnumber} Server and Proxy is available as a base product, and can be installed with the {slsa} Unified Installer.
 
@@ -50,12 +50,8 @@ ifeval::[{suma-content} == true]
 Therefore you do not require a separate registration code for {slsa}, only for {susemgr} Server or Proxy.
 endif::[]
 
-If not already done, download the {slsa} Unified Installer
-(version {nbsp}15{nbsp}SP1 or higher) from
-https://www.suse.com/products/server/download/[SUSE Linux Enterprise
-Server - Media Download].  With the Unified Installer you can installf
-many SLE-based base products such as {slsa}, {sled}, {slsa} for SAP
-Applications, or {susemgr}.
+If not already done, download the {slsa} Unified Installer (version {nbsp}15{nbsp}SP1 or higher) from https://www.suse.com/products/server/download/[SUSE Linux Enterprise Server - Media Download].
+With the Unified Installer you can install many SLE-based base products such as {slsa}, {sled}, {slsa} for SAP Applications, or {susemgr}.
 
 //TODO: What about Uyuni?
 
