--- a/modules/installation/pages/general-requirements.adoc
+++ b/modules/installation/pages/general-requirements.adoc
@@ -50,7 +50,7 @@ ifeval::[{suma-content} == true]
 Therefore you do not require a separate registration code for {slsa}, only for {susemgr} Server or Proxy.
 endif::[]
 
-If not already done, download the {slsa} Unified Installer (version {nbsp}15{nbsp}SP1 or higher) from https://www.suse.com/products/server/download/[SUSE Linux Enterprise Server - Media Download].
+If not already done, download the {sle} Unified Installer (version {nbsp}15{nbsp}SP1 or higher) from https://www.suse.com/products/server/download/[SUSE Linux Enterprise Server - Media Download].
 With the Unified Installer you can install many SLE-based base products such as {slsa}, {sled}, {slsa} for SAP Applications, or {susemgr}.
 
 //TODO: What about Uyuni?
