--- a/modules/client-configuration/pages/clients-ubuntu.adoc
+++ b/modules/client-configuration/pages/clients-ubuntu.adoc
@@ -4,7 +4,8 @@
 
 This section contains information about registering Salt clients running {ubuntu} operating systems.
 
-{susemgr} supports {ubuntu} 16.04 LTS and 18.04 LTS Clients using Salt. Traditional clients are not supported.
+{susemgr} supports {ubuntu} 16.04 LTS and 18.04 LTS Clients using Salt. 
+Traditional clients are not supported.
 
 Supported features:
 
