add link to Bootstrap Script creation
https://github.com/SUSE/spacewalk/issues/9178
https://bugzilla.suse.com/show_bug.cgi?id=1146895

--- a/adoc/advanced_topics_proxy_quickstart.adoc
+++ b/adoc/advanced_topics_proxy_quickstart.adoc
@@ -130,7 +130,7 @@ For normal SLES clients, [systemitem]``SLES12-SP4-Updates`` plus [systemitem]``S
 image::sles12-proxy-child.png[]
 
 
-. Modify a bootstrap script for the proxy if needed.
+. Navigate to menu:Main Menu[Admin > Manager Configuration > Bootstrap Script], and create or modify a bootstrap script for the proxy if needed.
 If you want to run the proxy on a traditional client (system type ``Management``) uncheck [guimenu]``Bootstrap using Salt``.
 Using Salt is supported since version 3.2.
 // What's up with:
