Change SLES to SLE
Co-Authored-By: Karl Eichwalder <ke@suse.de>

--- a/modules/installation/pages/general-requirements.adoc
+++ b/modules/installation/pages/general-requirements.adoc
@@ -44,7 +44,7 @@ Depending on your organization's setup, you might also need to activate your sub
 [[install.media]]
 == Obtaining Installation Media
 
-{susemgr} Server and Proxy can be installed with the {slsa} Unified Installer.
+{susemgr} Server and Proxy can be installed with the {sle} Unified Installer.
 
 ifeval::[{suma-content} == true]
 You only require a valid registration code for {productname}. You do not require a separate code for {slsa} {sles-version} {sp-version}.
