--- a/modules/installation/pages/proxy-registration.adoc
+++ b/modules/installation/pages/proxy-registration.adoc
@@ -5,7 +5,7 @@
 Migrating a traditionally registered Proxy system to a Salt Proxy system is not possible.
 Re-install the Proxy if you want to switch to Salt.
 
-The following procedure describe software channel setup and registering the installed {productname} Proxy with an activation key as a {productname} client.
+This procedure describes software channel setup and registering the installed {productname} Proxy with an activation key as a {productname} client.
 
 [IMPORTANT]
 .Downloading Channels
@@ -39,7 +39,6 @@ The [systemitem]``SLE-Product-SUSE-Manager-Proxy-4.0-Updates`` channel is mandat
 .Base and Child Proxy Channel
 image::proxy-child.png[]
 
-
 . Modify a bootstrap script for the proxy if needed.
 If you want to run the proxy on a traditional client (system type ``Management``) uncheck [guimenu]``Bootstrap using Salt``.
 Using Salt is the default.
@@ -65,3 +64,4 @@ When accepted, it will appear in the menu:Systems[Overview].
 .Proxy Channels
 image::sles15-proxy-channels.png[]
 
+Continue with setting up the registered {productname}: xref:proxy-setup.adoc[].
