Cleaned up and clarified wording about registration.
Clarified wording, as SUSE Manager doesn't have to be "registered with the SCC". Some OEM registration codes need to be activated though. Do we want to add this here?

--- a/modules/installation/pages/install-server-unified.adoc
+++ b/modules/installation/pages/install-server-unified.adoc
@@ -1,11 +1,11 @@
 [[install-server-unified]]
 = Installing {productname} {productnumber} Server
 
-{susemgr} 4.0 is a {suse} product of the {sle} 15 product family.
+{susemgr} 4.0 is a part of the {sle} 15 product family.
 This section describes how to install {susemgr} Server from {sle} installation media.
-It assumes you have already registered the {susemgr} product with the {scc} and have a registration code.
+It assumes that you already have a valid registration code.
 
-For information on registering with {scc}, or obtaining installation media, see xref:general-requirements.adoc[Requirements].
+For information on retrieving your organization credentials from {scc} or obtaining installation media, see xref:general-requirements.adoc[Requirements].
 
 
 [NOTE]
