Fixing zypper calls
The first one is too verbose. The second one doesn't work. The pattern can be installed via zypper in patterns-suma_server (with an "s") or using the "-t pattern" syntax.

--- a/modules/installation/pages/install-vm.adoc
+++ b/modules/installation/pages/install-vm.adoc
@@ -143,7 +143,7 @@ This basic administration package is required for preparing storage partitions:
 +
 
 ----
-zypper in -t package yast2-storage-ng
+zypper in yast2-storage-ng
 ----
 . Partition and mount the virtual disks at the following locations using {yast} Partitioner ([command]``yast2 disk``).
 +
@@ -168,7 +168,7 @@ Also consider to create a separate partition for [path]``/srv`` where Kiwi image
 +
 
 ----
-zypper in pattern-suma_server
+zypper in -t pattern suma_server
 ----
 
 . Reboot.
