Improve wording on third party software

--- a/modules/installation/pages/server-setup.adoc
+++ b/modules/installation/pages/server-setup.adoc
@@ -14,9 +14,9 @@ You will perform the following procedures:
 --
 {productname} is part of the {sle} 4.0 product family and thus compatible with the software shipped with {sls}.
 
-{productname} is a complex system, and therefore installing third party is not allowed.
+{productname} is a complex system, and therefore installing third party software is not allowed.
 Installing monitoring software provided by a third party vendor is allowed only if you do not exchange basic libraries such as SSL, cryptographic software, and similar tools.
-In case of emergency, SUSE reserves the right to ask to remove any third party software (and associated configuration changes) and then to reproduce the problem on a clean system.
+As part of providing product support, SUSE reserves the right to ask to remove any third party software (and associated configuration changes) and then to reproduce the problem on a clean system.
 --
 
 
