--- a/modules/installation/pages/install-ibmz.adoc
+++ b/modules/installation/pages/install-ibmz.adoc
@@ -15,17 +15,19 @@ Before you begin, check that your environment meets the base system requirements
 
 The base system for {productname}{nbsp}{productnumber} is {slsa}{nbsp}{sles-version}{nbsp}{sp-version}.
 
+[cols="1,1", options="header"]
 .Compatible {ibmz} Systems:
-
-* IBM zEnterprise System z196
-* IBM zEnterprise System z114
-* IBM zEnterprise EC12
-* IBM zEnterprise EC12
-* IBM zEnterprise BC12
-* IBM z13
-* LinuxOne Rockhopper
-* LinuxOne Emperor
-
+|===
+| Compatible Systems |
+| IBM zEnterprise System z196 |
+|  IBM zEnterprise System z114 |
+|  IBM zEnterprise EC12 |
+|  IBM zEnterprise EC12 |
+|  IBM zEnterprise BC12 |
+|  IBM z13 |
+|  LinuxOne Rockhopper |
+|  LinuxOne Emperor |
+|===
 
 [cols="1,1", options="header"]
 .Hardware Requirements
