--- a/modules/installation/pages/general-requirements.adoc
+++ b/modules/installation/pages/general-requirements.adoc
@@ -47,7 +47,8 @@ Depending on your organization's setup, you might also need to activate your sub
 {susemgr} Server and Proxy can be installed with the {sle} Unified Installer.
 
 ifeval::[{suma-content} == true]
-You only require a valid registration code for {productname}. You do not require a separate code for {slsa} {sles-version} {sp-version}.
+You only require a valid registration code for {productname}. 
+You do not require a separate code for {slsa} {sles-version} {sp-version}.
 endif::[]
 
 If you already have the installer media for {slsa}{nbsp}15{nbsp}SP1, you can re-use it. Otherwise, download the installer from https://www.suse.com/products/suse-manager/download/[SUSE Manager Media Download]. This page will also allow you to retrieve an evaluation code for {productname} if you don't have a valid registration code yet.
