fixed several nav list issues, and updated release notes for 4.0.2

--- a/modules/ROOT/pages/release-notes-version-4.0.adoc
+++ b/modules/ROOT/pages/release-notes-version-4.0.adoc
@@ -1,8 +1,8 @@
 [[patch.notes.version.4.0]]
-= Documentation Release Notes for {docversion}
+= Documentation Release Notes for {minorversion402}
 include::ROOT:partial$entities.adoc[]
-:revnumber: 4.0
-:revdate: June 6, 2019
+:revnumber: 4.0.2
+:revdate: August 27, 2019
 
 // !!!CHANGE THIS FILE ON THE MASTER BRANCH ONLY BEFORE PUBLISHING A RELEASE BRANCH!!!
 // Otherwise this file is out of sync with our develop/master branch
@@ -11,6 +11,42 @@ include::ROOT:partial$entities.adoc[]
 
 {revnumber} {revdate}
 
+== {minorversion402} Changes
+
+The following list covers the primary documentation content changes and additions in {minorversion402}.
+
+.Changes During {minorversion402}
+
+* Added link to bootstrap script creation
+* Added missing zypper entity
+* Added Canonical IP safeguard
+* Update for unified proxy installer
+* lunrjs integration (replaces Algolia with local search)
+* Antora UI improvements
+* The following new guides are available for contributors:
+** link:https://github.com/SUSE/doc-susemanager/wiki#our-toolchain[]
+** link:https://github.com/SUSE/doc-susemanager/wiki/wug[]
+* {jeos} docs cleaned up
+* Content review and cleanup on books (Administration, Installation, Salt, Retail, Client Configuration and Upgrade)
+* Removed outdated command (tailf)
+* Added missing images
+* Improved max size for configuration files
+* Added matching salt clients by minion_id or with a wildcard
+* Clarify image store for Kiwi images
+* Public cloud doc update
+* Content lifecycle manager filter update
+* Added note about support status of IE
+* Fixed IBM Z entity render issue
+* New Salt tuning guide
+
+
+.Bugzilla Fixes
+* 1146443 Documentation - Unclear how to use groups with SUMA 4 remote commands.
+A customer can go to the group of clients, add them to SSM, and then apply a Remote Command by menu:Main Menu[Systems > System Set Manager > Misc > Remote Command]
+* 1146411 Increasing the maximum size allowed for configuration files
+* 1132076 Interface used for branch network on branch server is not added to internal firewall zone
+
+
 
 == {docversion} Changes
 
@@ -18,7 +54,7 @@ include::ROOT:partial$entities.adoc[]
 
 The following list covers the primary content changes and additions.
 
-.Changes During {docversion}
+.Changes in {docversion}
 * xrefs have been fully restored across books
 * Update to left nav bar
 * Update to centOS client docs
