--- a/modules/client-configuration/nav-client-config-guide.adoc
+++ b/modules/client-configuration/nav-client-config-guide.adoc
@@ -3,7 +3,7 @@ ifndef::backend-pdf[]
 
 * xref:client-config-overview.adoc[Client Configuration Guide]
 // Manual Registration
-** xref:manual-registration-overview.adoc[Registration Overview]
+** xref:registration-overview.adoc[Registration Overview]
 *** xref:registration-webui.adoc[Registering with the Web UI]
 *** xref:registration-bootstrap.adoc[Registering with Bootstrap]
 *** xref:clients-and-activation-keys.adoc[Activation Keys]
@@ -52,7 +52,7 @@ include::modules/client-configuration/pages/client-config-overview.adoc[leveloff
 
 // Manual Registration
 
-include::modules/client-configuration/pages/manual-registration-overview.adoc[leveloffset=+1]
+include::modules/client-configuration/pages/registration-overview.adoc[leveloffset=+1]
 
 include::modules/client-configuration/pages/registration-webui.adoc[leveloffset=+2]
 
