--- a/modules/reference/nav-reference-manual.adoc
+++ b/modules/reference/nav-reference-manual.adoc
@@ -213,7 +213,7 @@ ifndef::backend-pdf[]
 **** xref:spacecmd/logout.adoc[logout]
 **** xref:spacecmd/org_.adoc[org_]
 **** xref:spacecmd/package_.adoc[package_]
-** xref:command-line-tools.adoc[]
+** xref:command-line-tools.adoc[Command Line Tools]
 //** xref:common_gfdl1.2_i.adoc[License]
 
 endif::[]
