--- a/modules/retail/nav-retail.adoc
+++ b/modules/retail/nav-retail.adoc
@@ -26,7 +26,7 @@ ifndef::backend-pdf[]
 *** xref:retail-delta-images.adoc[Delta Images]
 *** xref:retail-terminal-names.adoc[Terminal Names]
 *** xref:retail-mass-config.adoc[Mass Configuration]
-*** xref:retail-mass-config-yaml.adoc[]
+*** xref:retail-mass-config-yaml.adoc[Mass Config YAML Example]
 *** xref:retail-offline.adoc[Offline Use]
 *** xref:retail-terminal-ratelimiting.adoc[Rate Limiting Terminals]
 // Retail Upgrade
