stating with postgres 10 migration
https://github.com/SUSE/spacewalk/issues/9203

--- a/modules/upgrade/pages/db-migration.adoc
+++ b/modules/upgrade/pages/db-migration.adoc
@@ -1,6 +1,11 @@
 [[db-migration]]
 = Database Migration
 
+If you want to upgrade {productname} 3.2 to {productname} 4 you must check whether {productname} 3.2 is already based PostgreSQL version 10.  If yes, you can skip this section.  If it is based on a older version such as 9.6 you must migrate PostgreSQL to version 10 first.
+
+
+
+
 
 When you installed {productname} Server 3.1 or earlier on {sls}{nbsp}12{nbsp}SP2 or earlier, it was based on a PostgreSQL{nbsp}9.4 database.
 PostgreSQL{nbsp}9.4 can be upgraded to PostgreSQL{nbsp}9.6.
