--- a/modules/administration/pages/maintenance-window.adoc
+++ b/modules/administration/pages/maintenance-window.adoc
@@ -1,7 +1,7 @@
 [[maintenance-window]]
 = Maintenance Window Checklist
 
-If you work on a system with scheduled maintenance windows, you might find it difficult to remember all the things that you need to during that critical downtime.
+If you work on a {productname} Server with scheduled maintenance windows, you might find it difficult to remember all the things that you need to during that critical downtime.
 
 This section contains a checklist for your maintenance window, with links to further information on performing each of the steps, if you need it.
 
