--- a/modules/administration/pages/maintenance-window.adoc
+++ b/modules/administration/pages/maintenance-window.adoc
@@ -7,11 +7,14 @@ This section contains a checklist for your maintenance window, with links to fur
 
 
 . Stop services.
-. Check if the configuration is still correct, and apply the highstate.
+You will need to stop the spacewalk, SAP, and database services, along with any others you have running.
+. Check if the configuration is still correct.
+. On Salt systems, apply the highstate.
 . Apply the latest updates.
 See xref:upgrade:server-upgrade.adoc[].
 . Update to the latest service pack, if required.
 See xref:upgrade:sp-migration.adoc[].
 . Reboot the server.
-. Check if the configuration is still correct, and apply the highstate.
+. Check if the configuration is still correct.
+. On Salt systems, apply the highstate.
 . Start any stopped services.
