--- a/modules/administration/nav-administration-guide.adoc
+++ b/modules/administration/nav-administration-guide.adoc
@@ -20,6 +20,7 @@ ifndef::backend-pdf[]
 // ISS
 ** xref:iss.adoc[Inter-Server Synchronization]
 ** Security
+*** xref:security-hardening.adoc[Security Hardening]
 *** xref:master-fingerprint.adoc[Master Fingerprint]
 *** xref:repo-metadata.adoc[Repository Metadata]
 *** xref:mirror-sources.adoc[Mirror Sources]
@@ -88,6 +89,8 @@ include::modules/administration/pages/public-cloud.adoc[leveloffset=+1]
 include::modules/administration/pages/iss.adoc[leveloffset=+1]
 
 // Security
+include::modules/administration/pages/security-hardening.adoc[leveloffset=+1]
+
 include::modules/administration/pages/master-fingerprint.adoc[leveloffset=+1]
 
 include::modules/administration/pages/repo-metadata.adoc[leveloffset=+1]
