Add changes from MC

--- a/modules/client-configuration/pages/client-config-overview.adoc
+++ b/modules/client-configuration/pages/client-config-overview.adoc
@@ -41,7 +41,6 @@ The icons in this table indicate:
 | SUSE Manager Proxy  |         | icon:check[role="green"]  | icon:check[role="green"]
 | Action Chains       |         | icon:check[role="green"]  | icon:check[role="green"]
 | Software Crash Reporting |    | icon:check[role="green"]  | icon:times[role="danger"]
-| Staging             |         | icon:check[role="green"]  | icon:check[role="green"]
 | Duplicate Package Reporting | | icon:check[role="green"] | icon:check[role="green"]
 | SCAP Auditing       |         | icon:check[role="green"]  | icon:check[role="green"]
 | Support for Multiple Organizations | | icon:check[role="green"] | icon:check[role="green"]
@@ -49,5 +48,5 @@ The icons in this table indicate:
 | System Locking       |        | icon:check[role="green"]  | icon:question[role="gray"]
 | Configuration File Management | | icon:check[role="green"]  | icon:check[role="green"]
 | Snapshots and Profiles |      | icon:check[role="green"]  | icon:question[role="gray"] (Profiles are supported, sync is not)
-| Power Management     |        | icon:check[role="green"]  | icon:question[role="gray"]
+| Power Management     |        | icon:check[role="green"]  | icon:check[role="green"]
 |===
