udpated release notes

--- a/modules/ROOT/pages/release-notes-version-4.0.adoc
+++ b/modules/ROOT/pages/release-notes-version-4.0.adoc
@@ -17,6 +17,8 @@ The following list covers the primary documentation content changes and addition
 
 .Changes During {minorversion402}
 
+* Added page level table of contents for individual page navigation
+* Added Next/Previous buttons to the Antora WebUI for navigating documents
 * Added link to bootstrap script creation
 * Added missing zypper entity
 * Added Canonical IP safeguard
